--- a/.gitmodules
+++ b/.gitmodules
@@ -1,14 +1,12 @@
+[submodule "extra/wolfssl/wolfssl"]
+	path = extra/wolfssl/wolfssl
+	url = https://github.com/wolfSSL/wolfssl.git
 [submodule "libmariadb"]
 	path = libmariadb
-	url = https://code.devsnc.com/dev/sumo-mariadb-connector-c.git
-	branch = master
+	url = https://github.com/mariadb-corporation/mariadb-connector-c.git
 [submodule "storage/rocksdb/rocksdb"]
 	path = storage/rocksdb/rocksdb
 	url = https://github.com/facebook/rocksdb.git
 [submodule "wsrep-lib"]
 	path = wsrep-lib
 	url = https://github.com/codership/wsrep-lib.git
-	branch = master
-[submodule "extra/wolfssl/wolfssl"]
-	path = extra/wolfssl/wolfssl
-	url = https://github.com/wolfSSL/wolfssl.git
